# MCTchesS

./: build.sh  dataset.py  network.py  train.py
cpp/: CMakeLists.txt
cpp/lib/: game.cpp  inference.cpp  mcts.cpp  net.cpp
